Quad View - Properties Region - Clip Tickable option bug? #41175

Closed
opened 2014-07-25 12:07:53 +02:00 by Terry Wallwork · 7 comments

System Information
Operating system and graphics card

Blender Version
Broken: (example: 2.69.7 4b206af, see splash screen)
Worked: (optional)

Short description of error

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

I am using Blender GIT Rev af16265 on a Fedora 20 Linux 64Bit box with an Intel 3000HD GFX

Noticed that when using [3D View Editor Header > View Menu > Toggle Quad View]. If I activate
Quad View and then open the [3D View Editor > Properties Region > Display Panel] and then
tick the Lock, Box and Clip tickable options. The 3D View updates to respect those options.

But if I deselect the Lock tickable option the other two options get unselected in the
Properties Region, yet their effects are still visible in the 3D Viewport (as you can see by
rotating/zooming out one of the quad views, clipping is still active).

I have attached my system-info.txt file, a demo blend file that I used to test, and a VIDEO
so you can see the issue.

system-info.txt

QuadView-PropertiesRegionBug_.blend

QuadView-ClipBug_.webm

**System Information** Operating system and graphics card **Blender Version** Broken: (example: 2.69.7 4b206af, see splash screen) Worked: (optional) **Short description of error** **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps I am using Blender GIT Rev af16265 on a Fedora 20 Linux 64Bit box with an Intel 3000HD GFX Noticed that when using [3D View Editor Header > View Menu > Toggle Quad View]. If I activate Quad View and then open the [3D View Editor > Properties Region > Display Panel] and then tick the Lock, Box and Clip tickable options. The 3D View updates to respect those options. But if I deselect the Lock tickable option the other two options get unselected in the Properties Region, yet their effects are still visible in the 3D Viewport (as you can see by rotating/zooming out one of the quad views, clipping is still active). I have attached my system-info.txt file, a demo blend file that I used to test, and a ***VIDEO*** so you can see the issue. [system-info.txt](https://archive.blender.org/developer/F99493/system-info.txt) [QuadView-PropertiesRegionBug_.blend](https://archive.blender.org/developer/F99494/QuadView-PropertiesRegionBug_.blend) [QuadView-ClipBug_.webm](https://archive.blender.org/developer/F99495/QuadView-ClipBug_.webm)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @TerryWallwork-1

Added subscriber: @TerryWallwork-1
Bastien Montagne was assigned by Sergey Sharybin 2014-07-28 12:48:52 +02:00

Added subscriber: @Sergey

Added subscriber: @Sergey

bastien, mind having a look please? :)

bastien, mind having a look please? :)

This issue was referenced by 6ba4db2906

This issue was referenced by 6ba4db29062a1d3aaa6e18de776a1fd761a1dcb0

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 6ba4db2906.

Closed by commit 6ba4db2906.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41175
No description provided.