Fix T41175: Quad View - Properties Region - Clip Tickable option bug?